build extension